Touch scrolling/overflow fix

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -26,6 +26,11 @@ p {
   grid-template-columns: 1fr 3fr;
 }
 
+.content-wrapper {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 a.link {
   display: inline-block;
   color: blue;
