--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -4,7 +4,6 @@
   
   &-wrapper {
     padding: 6rem;
-    overflow-y: scroll;
   
     h2 {
       font-size: 3rem;
